# ChangeLog for dev-ruby/gpgme
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/gpgme/ChangeLog,v 1.1 2015/02/12 01:19:43 robbat2 Exp $

*gpgme-2.0.8 (12 Feb 2015)

  12 Feb 2015; Robin H. Johnson <robbat2@gentoo.org> +gpgme-2.0.8.ebuild,
  +metadata.xml:
  Initial commit.