@@ -1,4 +1,4 @@
 DIST gpgme-2.0.8.gem 2221056 SHA256 b54f47c3c932f4331e1c8d4ac971fe203ac030be38788b23fd5d05aa631dd0ab SHA512 9ff616d2c11af05aaa69fa132040c6268f01d05a8444297814326e0cd57dcf21fcc5489cc4e1fd3d40ad7652fa06abbb37caf0b69664e38489ed6939b96dfe7f WHIRLPOOL e085fbf9d806fbdcbaf91f6acf008de6b6ebdb6764ec07acb7e948f19535d92f72a61f76520e7ed83d11f55e9a87f798149c11061e58ebd388c244394e93570b
-EBUILD gpgme-2.0.8.ebuild 812 SHA256 4cb459bc8498fdb0d0b4c9fbfe37902bde060e5849b72ff972dcf7d72b8f1354 SHA512 81da4a1f323b2d8f2d18c91a7d1fc2171a477074c058afbe13a2802ab95619312a03360e9b007131d76948ce76eb85ffbde47944a4b129c6e88a9696be532d3c WHIRLPOOL faf92479800fc668a69f49a60b1efe09333daacaca829e0274116859c2a964d4d3a08755a65853e6eabd12d3ec0807fb633c3057a8bbe29c550f8c8c21fa2148
-MISC ChangeLog 339 SHA256 b113b92676cf336ff7d74b535986c16d4b628413db4dc33a3eea10a3875626bb SHA512 8d70167d9f418b600510fa5665f28355c31ccb3ea7c6c526f14aa2b4f1a06ea4b101153f04a5abdc29acee63c90eedac40a50c53b6bc2061d9b2a9d097d6de7a WHIRLPOOL f8dcd6578e1c7febc912dd30446b567ee76082d439277368fe3a1fc7ddfb621cf7d1d3c03f58ff189468958d2077d36d58737e08cdf6a437fed13595c5450f42
+EBUILD gpgme-2.0.8.ebuild 803 SHA256 cfc9f3ec100cfc7e9479f1a4458afbc98076e5c07680bd5ccc6058dadb529e8c SHA512 34cb6e3c76e75bbb6f10ad7b8a00d5a4b213162b04a505de358ecd2a548bcc84b23719df6c48d3a0ab699a888ed2fe08cfff98652b7b140ba45cdc0d19767637 WHIRLPOOL 76ddd561f777f32a5b676840c60c4b3be3617aa80fa0c9be7dfc24c8388411ea15123050fb15c9a694b84e64103286ea5a755a82d993f2426d5ea24c380eb941
+MISC ChangeLog 423 SHA256 e259898b0c144a21fe12cb3136f90bc8527b963b87c05e687b736a81e2633308 SHA512 72b88acbcd119a308140a47070468dd7c184882f1817817b24e0ec098b1506915b7c6a6612593158fa83618041f9bed666c58b8a60728617501ec632a004bd07 WHIRLPOOL b292312ee6d631f3043610588a91369cb29d1e9b4a7e444d5ee79e0d28c8e85cbae21249215945cde7058dd27eaa1477c2e6e0e6dc95e11a62d1b626e2b3bd59
 MISC metadata.xml 179 SHA256 f0577f0aa495fbcdfefa082b8ebb990ee0ee34501d6e27952bfb5e8afe545763 SHA512 183ebc1c2b95b94284a26b0d35600e187902ebab864892c096a02cc0eab98e3b3189b619d49be4f86db7717535b3d25f3e88174620220810a3ba7096780c6d0f WHIRLPOOL 58e0a8b0dcb160e1c607b468edafef4fb52f1007e01737e60647a6b28ad8fd9e446047a291c8d3d4f9abba63fab88b6467962f663a2ec20b294c9c00cf120017
