@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hiera-eyaml/hiera-eyaml-2.0.6.ebuild,v 1.1 2015/02/12 00:13:40 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hiera-eyaml/hiera-eyaml-2.0.6.ebuild,v 1.2 2015/02/12 05:24:33 patrick Exp $
 
 EAPI=5
 USE_RUBY="ruby19 ruby20 ruby21"
@@ -20,4 +20,3 @@ IUSE=""
 
 ruby_add_rdepend "dev-ruby/highline"
 ruby_add_rdepend "dev-ruby/trollop"
-
