@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/hiera-eyaml
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hiera-eyaml/ChangeLog,v 1.1 2015/02/12 00:13:40 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hiera-eyaml/ChangeLog,v 1.2 2015/02/12 05:24:33 patrick Exp $
+
+  12 Feb 2015; Patrick Lauer <patrick@gentoo.org> hiera-eyaml-2.0.6.ebuild:
+  Whitespace
 
 *hiera-eyaml-2.0.6 (12 Feb 2015)
 
